<resources>
    <!-- Settings -->
    <string name="app_name">DOT</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference -->
    <string name="pref_username_key">username</string>
    <string name="pref_username_title">User Name</string>
    <string name="pref_summary_username">Enter the name you want to use as you chat</string>
    <string name="pref_username_default">Traveller</string>
    <string name="pref_language_key">language</string>
    <string name="pref_language_label">Preferred Language</string>
    <string name="pref_language_zhTW">zh-TW</string>
    <string name="pref_language_en">en</string>
    <string name="pref_language_label_zhTW">繁體中文</string>
    <string name="pref_language_label_en">English</string>
    <string name="pref_tutorial_key">tutorial</string>
    <string name="pref_tutorial_label">Show App Tutorial on Start Up</string>
    <string name="pref_tutorial_yes">yes</string>
    <string name="pref_tutorial_no">no</string>
    <string name="pref_tutorial_label_yes">Yes</string>
    <string name="pref_tutorial_label_no">No</string>

    <!-- MainActivity -->
    <string name="title_activity_nearby">NearbyActivity</string>
    <string name="nearby">Nearby Place</string>
    <string name="localTopics">What\'s Hot Here</string>
    <string name="chat">Chat With Locals</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="app_id">1606543712966553</string>
    <string name="welcome_tour_1">Find "most checkined" \nPlaces nearby\n</string>
    <string name="welcome_tour_2">Don\'t know what to talk? \nSee what locals have been talking about</string>
    <string name="welcome_tour_3">Ask people around\nFor anything</string>

    <!-- NearbyActivity -->
    <string name="nearby_settings">我的設定</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- MapActivity-->
    <string name="title_activity_maps">Map</string>

    <!--ChatActivity -->
    <string name="title_activity_chat">Chat</string>
    <string name="txt_loginname">登入名稱</string>
    <string name="chatroom_icon">CHATROOM_ICON</string>
    <string name="title_activity_chat_list">選擇聊天室</string>

    <!-- LocalTopics -->
    <string name="title_activity_local_topics">LocalTopicsActivity</string>
    <string name="title_activity_main_fragment">MainFragment</string>
    <string name="title_activity_topic_list">TopicList</string>
    <string name="title_activity_topic_content">TopicContentActivity</string>

    <!-- Navigation Activity -->
    <string name="title_activity_navigate">導航</string>
    <string name="start_navigation">開始導航</string>
    <string name="current_location">現在位置</string>
    <string name="next_site">下個景點</string>
    <string name="share_location">分享</string>
    <string name="title_activity_feedback">FeedbackActivity</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
