<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:key="@string/pref_username_key"
        android:title="@string/pref_username_title"
        android:summary="@string/pref_summary_username"
        android:defaultValue="@string/pref_username_default"
        android:inputType="text"
        android:singleLine="true" />
    <ListPreference
        android:key="@string/pref_language_key"
        android:title="@string/pref_language_label"
        android:defaultValue="@string/pref_language_zhTW"
        android:entries="@array/pref_language_options"
        android:entryValues="@array/pref_language_values" />

</PreferenceScreen>