<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <Button android:id="@+id/button1"
        style="@style/HomeButton"
        android:text="@string/nearby"
        android:onClick="nearbyBtn" />

    <Button android:id="@+id/button2"
        style="@style/HomeButton"
        android:text="@string/localTopics"
        android:onClick="localTopicBtn" />

    <Button android:id="@+id/button3"
        style="@style/HomeButton"
        android:text="@string/chat"
        android:onClick="chatBtn" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"/>
    </LinearLayout>

</RelativeLayout>
